# rust-basic-server

./: README.md
client/: Cargo.toml
client/scripts/: script1.ps1
client/src/: main.rs
web_server/: Cargo.toml
web_server/src/: main.rs  websocket.rs
web_server/static/: index.html
