[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"    # For the web framework
serde = "1.0.193"        # For serializing and deserializing data (optional, if needed)
serde_json = "1.0.108"   # For handling JSON data (optional, if needed)
actix-files = "0.6.2"